[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
palomadex = { workspace = true }
palomadex-factory = { workspace = true }
palomadex-multi-hop = { workspace = true }
palomadex-pair = { workspace = true }
palomadex-stake = { workspace = true }
