[package]
name = "palomadex-factory"
version = { workspace = true }
authors = ["Volume Fi"]
edition = { workspace = true }
description = "PalomaDex factory contract - pair contract generator"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
palomadex = { workspace = true }
palomadex-stake = { workspace = true, features = ["library"] }
cw-placeholder = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
palomadex-pair = { workspace = true }
wyndex-factory-2_1_0 = { package = "wyndex-factory", git = "https://github.com/wynddao/wynddex", tag = "v2.1.0" }
