[package]
name = "gauge-adapter"
authors = ["Volume Fi"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
wynd-curve-utils = { workspace = true }
palomadex = { workspace = true }
palomadex-stake = { workspace = true, features = ["library"] }
cw-placeholder = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
palomadex-factory = { workspace = true }
palomadex-pair = { workspace = true }
palomadex-pair-lsd = { workspace = true }
