[package]
name = "lp-converter"
description = "PalomaDex LP token converter - mechanism, which takes bonded token from one staking contract and allows them to be moved to another staking contract"
version = { workspace = true }
authors = ["Volume Fi"]
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
palomadex = { workspace = true }
wynd-lsd-hub = { workspace = true }
cw20 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
palomadex-factory = { workspace = true }
palomadex-pair = { workspace = true }
palomadex-stake = { workspace = true }
wynd-lsd-hub = { workspace = true }
