[package]
name = "palomadex-multi-hop"
version = { workspace = true }
authors = ["Volume Fi"]
edition = { workspace = true }
description = "PalomaDex Multi-hop - provides multi-hop swap functionality for palomadex pools"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
palomadex = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
palomadex-factory = { workspace = true }
palomadex-pair = { workspace = true }
palomadex-stake = { workspace = true }
