[package]
name = "palomadex-pair"
version = { workspace = true }
authors = ["Volume Fi"]
edition = { workspace = true }
description = "The PalomaDex constant product pool contract implementation"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
palomadex-stake = { workspace = true }
palomadex = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
proptest = { workspace = true }
palomadex-factory = { workspace = true }
